Working Archeologist. Added the loot. Added the generation for the loot.